--- a/StardewAquariumInformant/manifest.json
+++ b/StardewAquariumInformant/manifest.json
@@ -1,18 +1,26 @@
 {
+  /*
+   | This file is automatically updated by ModManifestBuilder
+   | when the project is compiled.
+   | 
+   | Changes made to this file may be overwritten.
+   | 
+   */
+  "$schema": "https://smapi.io/schemas/manifest.json",
+  "UniqueID": "Moonwolf.StardewAquariumInformant",
   "Name": "StardewAquariumInformant",
-  "Author": "Moonwolf287",
+  "Author": "Moonwolf",
   "Version": "1.0.0",
   "Description": "Additional decorator for Informant mod. Marks Fish that have not yet been donated to the Stardew Aquarium.",
-  "UniqueID": "Moonwolf.StardewAquariumInformant",
-  "EntryDll": "StardewAquariumInformant.dll",
   "MinimumApiVersion": "3.16.1",
+  "EntryDll": "StardewAquariumInformant.dll",
   "Dependencies": [
+    {
+      "UniqueID": "Cherry.StardewAquarium"
+    },
     {
       "UniqueID": "Slothsoft.Informant",
       "MinimumVersion": "1.4.0"
-    },
-    {
-      "UniqueID": "Cherry.StardewAquarium"
     }
   ],
   "UpdateKeys": [
