--- a/StardewAquariumInformant/StardewAquariumInformant.csproj
+++ b/StardewAquariumInformant/StardewAquariumInformant.csproj
@@ -10,6 +10,7 @@
         <UniqueId>Moonwolf.StardewAquariumInformant</UniqueId>
         <MinimumApiVersion>3.16.1</MinimumApiVersion>
         <UpdateKeys>Github:Moonwolf287/stardew-aquarium-informant-addon</UpdateKeys>
+        <BaseManifest>new</BaseManifest>
         
         <RepositoryType>git</RepositoryType>
         <RepositoryUrl>https://github.com/Moonwolf287/stardew-aquarium-informant-addon</RepositoryUrl>
@@ -25,5 +26,10 @@
     <ItemGroup>
         <PackageReference Include="Leclair.Stardew.ModManifestBuilder" Version="2.1.0" />
         <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.1.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <SMAPIDependency Include="Slothsoft.Informant" Version="1.4.0" Required="true" />
+        <SMAPIDependency Include="Cherry.StardewAquarium" Required="true" />
     </ItemGroup>
 </Project>
