--- a/StardewAquariumInformant/StardewAquariumInformant.csproj
+++ b/StardewAquariumInformant/StardewAquariumInformant.csproj
@@ -9,7 +9,7 @@
         <Description>Additional decorator for Informant mod. Marks Fish that have not yet been donated to the Stardew Aquarium.</Description>
         <UniqueId>Moonwolf.StardewAquariumInformant</UniqueId>
         <MinimumApiVersion>3.16.1</MinimumApiVersion>
-        <UpdateKeys>Github:Moonwolf287/stardew-aquarium-informant-addon</UpdateKeys>
+        <UpdateKeys>Nexus:16527,Github:Moonwolf287/stardew-aquarium-informant-addon</UpdateKeys>
         <BaseManifest>new</BaseManifest>
         
         <RepositoryType>git</RepositoryType>
